# workflows_minerals

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  Procfile  WF010_baltic_email_ingestion_v2.json  [WF] DISPARO NOTICIAS TELEGRAM __ TEXTO.json  [WF] RELATORIO RATIONALE __ TRIGGER TELEGRAM.json  [WF] RELATORIO SGX.json  fetch_lseg_futures.py  package-lock.json  package.json  pytest.ini  railway.json  requirements.txt
webhook/: app.py  callback_router.py  contact_admin.py  digest.py  dispatch.py  dispatch_document.py  metrics.py  onedrive_pipeline.py  pdf_storage.py  pipeline.py  pyproject.toml  query_handlers.py  queue_selection.py  redis_queries.py  reports_nav.py  requirements.txt  status_builder.py  telegram.py  workflow_trigger.py
webhook/bot/: __init__.py  callback_data.py  channel_delivery.py  config.py  delivery.py  keyboards.py  main.py  routing.py  states.py  users.py
webhook/bot/middlewares/: auth.py
webhook/bot/routers/: __init__.py  _helpers.py  callbacks.py  callbacks_contacts.py  callbacks_curation.py  callbacks_menu.py  callbacks_onedrive.py  callbacks_queue.py  callbacks_reports.py  callbacks_workflows.py  channel_join.py  commands.py  messages.py  onboarding.py  settings.py
webhook/mini-app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
webhook/mini-app/src/: App.tsx  index.css  main.tsx  telegram.d.ts
webhook/mini-app/src/lib/: api.ts  (+2 more)
webhook/routes/: __init__.py  api.py  mini_api.py  mini_auth.py  mini_static.py  onedrive.py  preview.py
webhook/templates/: preview.html
(+401 files in other folders)
