[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-webhook"
version = "1.0.0"
description = "Telegram webhook for Rationale News approval"
requires-python = ">=3.9"

[tool.railway]
build = "pip install -r requirements.txt"
start = "gunicorn app:app --bind 0.0.0.0:$PORT"
